--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="main title" >
+    <div class="main" >
           <div id='stars'></div>
           <div id='stars2'></div>  
           <!-- profile section starts-->
@@ -53,22 +53,22 @@
 
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/abhishek.parmar.9887" target="_blank" ><i class="fa fa-facebook-official fa-2x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="facebook.com/abhishek.parmar.9887"></i></a>
+                        <a href="https://www.facebook.com/abhishek.parmar.9887" target="_blank" ><i class="fa fa-facebook-official fa-3x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="facebook.com/abhishek.parmar.9887"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/abhishek.parmar.9887" target="_blank" ><i class="fa fa-instagram fa-2x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="facebook.com/abhishek.parmar.9887"></i></a>
+                        <a href="https://www.facebook.com/abhishek.parmar.9887" target="_blank" ><i class="fa fa-instagram fa-3x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="facebook.com/abhishek.parmar.9887"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/abhishek-parmar-772929144/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="linkedin.com/in/abhishek-parmar-772929144"></i></a>
+                        <a href="https://www.linkedin.com/in/abhishek-parmar-772929144/" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="linkedin.com/in/abhishek-parmar-772929144"></i></a>
                     </li>
                     <li>
-                        <a href="https://github.com/abhishek-parmar1" target="_blank"><i class="fa fa-github-alt fa-2x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="github.com/abhishek-parmar1"></i></a>
+                        <a href="https://github.com/abhishek-parmar1" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="github.com/abhishek-parmar1"></i></a>
                     </li>
                     <li>
-                        <a href="https://stackoverflow.com/users/7624422/abhishek-parmar" target="_blank"><i class="fa fa-stack-overflow fa-2x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="stackoverflow.com/users/7624422/abhishek-parmar"></i></a>
+                        <a href="https://stackoverflow.com/users/7624422/abhishek-parmar" target="_blank"><i class="fa fa-stack-overflow fa-3x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="stackoverflow.com/users/7624422/abhishek-parmar"></i></a>
                     </li>
                     <li>
-                        <a href="mailto:abhishekparmar@mamxico.com" target="_blank"><i class="fa fa-envelope fa-2x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="abhishekparmar@mamxico.com"></i></a>
+                        <a href="mailto:abhishekparmar@mamxico.com" target="_blank"><i class="fa fa-envelope fa-3x" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="abhishekparmar@mamxico.com"></i></a>
                     </li>
                 </ul>
 
