--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div id='stars2'></div>  
           <!-- profile section starts-->
           <a href="#">
-            <img src="images/profile.JPG" alt="Profile Photo">
+            <img src="images/image.jpg" alt="Profile Photo">
           </a>
           <!-- profile section ends-->
           <!-- name section starts-->
