--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <div class="main" >
+        <div class="container">
           <div id='stars'></div>
           <div id='stars2'></div>  
           <!-- profile section starts-->
@@ -73,7 +74,6 @@
                 </ul>
 
                 <br>
-                <br>
 
                 <ul class="fs">
                     <li>
@@ -94,7 +94,8 @@
              <p  class="foot">Developed &amp; Designed By Abhishek Parmar &copy; 2017</p>
         </footer>
         <!-- footer section ends-->
-      </div>
+       </div>
+    </div>
       
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
